Добавлено уведомление по почте и смс (эмулятор шлет в телеграм), shell-пример пользования api

--- a/RoomApiService/src/main/resources/db/changelog/1.0/2019-07-20-0006-acc_object.yaml
+++ b/RoomApiService/src/main/resources/db/changelog/1.0/2019-07-20-0006-acc_object.yaml
@@ -64,6 +64,8 @@ databaseChangeLog:
         columns:
         - column:
             name: name
+        - column:
+            name: contract_id
     - createIndex:
         indexName: idx_acc_object_contract_id
         tableName: accounting_object
