--- a/RoomApiService/src/main/resources/db/changelog/1.0/2019-07-20-0008-charge_once.yaml
+++ b/RoomApiService/src/main/resources/db/changelog/1.0/2019-07-20-0008-charge_once.yaml
@@ -42,17 +42,17 @@ databaseChangeLog:
                 nullable: true
         - column:
             name: cost
-            type: money
+            type: numeric(12,2)
             constraints:
                 nullable: false
         - column:
             name: quantity
-            type: numeric
+            type: numeric(12,3)
             constraints:
                 nullable: false
         - column:
             name: summ
-            type: money
+            type: numeric(12,2)
             constraints:
                 nullable: false
 - changeSet:
