--- a/ConfigServer/src/main/resources/config/room-api-microservice.yaml
+++ b/ConfigServer/src/main/resources/config/room-api-microservice.yaml
@@ -1,8 +1,25 @@
-security:
-  username: api
-  password: AP19rs#$
-
+room-api:
+  security:
+    api:
+      username: api
+      password: AP19rs#$
+  mail:
+    subject: "Для Вас важная информация в личном кабинете"
+    from: "ООО Рога и копыта <p913@inbox.ru>"
 
 eureka:
   client:
+    register-with-eureka: true
     fetch-registry: true
+
+spring:
+  mail:
+    host: smtp.mail.ru
+    port: 465
+    username: p913@inbox.ru
+    password: in@!BX16
+    properties:
+      mail:
+        smtp:
+          auth: true
+    protocol: smtps
