--- a/RoomApiService/src/main/resources/db/changelog/1.0/2019-07-20-0004-contract.yaml
+++ b/RoomApiService/src/main/resources/db/changelog/1.0/2019-07-20-0004-contract.yaml
@@ -52,6 +52,8 @@ databaseChangeLog:
         columns:
           - column:
               name: number
+          - column:
+                name: contragent_id
     - createIndex:
         indexName: idx_contract_contragent_id
         tableName: contract
