--- a/RoomApiService/src/main/resources/application.yaml
+++ b/RoomApiService/src/main/resources/application.yaml
@@ -13,15 +13,11 @@ spring:
     hibernate:
       ddl-auto: none
 
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         #format_sql: true
 
     open-in-view: false
-
-  jackson:
-    serialization:
-      FAIL_ON_EMPTY_BEANS: false
 
